@@ -1,3 +1,9 @@
+2002-09-16  Loren J. Rittle  <ljrittle@acm.org>
+
+	libstdc++/7922
+	* include/ext/stl_rope.h (rope<>): Qualify dependent names
+	with `typename'.
+
 2002-09-16  Richard Henderson  <rth@redhat.com>
 
 	* include/std/std_limits.h (__glibcpp_f32_QNaN_bytes,
